--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,20 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
+    buildscript {
+        repositories {
+            google()
+            mavenCentral()
+        }
+    }
+
+    //allprojects {
+    //    repositories {
+    //        google()
+    //        mavenCentral()
+    //    }
+    //}
 }
 
 dependencies {
@@ -44,6 +58,7 @@ dependencies {
     implementation 'androidx.camera:camera-lifecycle:1.0.0'
     implementation 'androidx.camera:camera-view:1.0.0-alpha26'
     implementation 'androidx.camera:camera-camera2:1.0.0'
+    implementation 'com.google.android.gms:play-services-ads-lite:21.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -59,4 +74,7 @@ dependencies {
     //Mediapipe
     implementation 'com.google.mediapipe:solution-core:latest.release'
     implementation 'com.google.mediapipe:hands:latest.release'
+
+    //Google Mobile Ads
+    implementation 'com.google.android.gms:play-services-ads:21.2.0'
 }
