--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'androidx.camera:camera-lifecycle:1.0.0'
     implementation 'androidx.camera:camera-view:1.0.0-alpha26'
     implementation 'androidx.camera:camera-camera2:1.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'com.google.android.gms:play-services-base:18.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -78,4 +80,7 @@ dependencies {
 
     //Google Mobile Ads
     implementation 'com.google.android.gms:play-services-ads:21.2.0'
+
+    //Login Google
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
 }
