--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    // Add the Google services Gradle plugin
+    id 'com.google.gms.google-services'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.senalar"
+        applicationId "com.unlam.senalar"
         minSdk 26
         targetSdk 32
         versionCode 1
@@ -40,13 +42,6 @@ android {
             mavenCentral()
         }
     }
-
-    //allprojects {
-    //    repositories {
-    //        google()
-    //        mavenCentral()
-    //    }
-    //}
 }
 
 dependencies {
@@ -78,4 +73,13 @@ dependencies {
 
     //Google Mobile Ads
     implementation 'com.google.android.gms:play-services-ads:21.2.0'
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-libraries
 }
