--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,12 +74,13 @@ dependencies {
     //Google Mobile Ads
     implementation 'com.google.android.gms:play-services-ads:21.2.0'
 
-    // Import the Firebase BoM
+    // Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
-
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
 
-    // Add the dependencies for any other desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
