--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.senalar">
+    package="com.unlam.senalar">
 
     <uses-feature android:name="android.hardware.camera.any" />
 
@@ -19,20 +19,20 @@
         android:theme="@style/Theme.Senalar"
         tools:targetApi="31">
         <activity
-            android:name=".StartLoginActivity"
+            android:name="com.unlam.senalar.StartLoginActivity"
             android:exported="false" />
         <activity
-            android:name=".CameraActivity"
+            android:name="com.unlam.senalar.CameraActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".HomeActivity"
+            android:name="com.unlam.senalar.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".HowToUseActivity"
+            android:name="com.unlam.senalar.HowToUseActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.unlam.senalar.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
