--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'androidx.camera:camera-view:1.0.0-alpha26'
     implementation 'androidx.camera:camera-camera2:1.0.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -84,4 +86,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
     implementation 'com.squareup.picasso:picasso:2.8'
+
+    implementation 'com.braintreepayments:card-form:5.4.0'
 }
