--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.unlam.senalar">
+    package="com.unlam.senalar" >
 
     <uses-feature android:name="android.hardware.camera.any" />
 
@@ -17,23 +17,26 @@
         android:roundIcon="@drawable/logo_senalar"
         android:supportsRtl="true"
         android:theme="@style/Theme.Senalar"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name="com.unlam.senalar.StartLoginActivity"
+            android:name=".StartSubscription"
             android:exported="false" />
         <activity
-            android:name="com.unlam.senalar.CameraActivity"
+            android:name=".StartLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CameraActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.unlam.senalar.HomeActivity"
+            android:name=".HomeActivity"
             android:exported="false" />
         <activity
-            android:name="com.unlam.senalar.HowToUseActivity"
+            android:name=".HowToUseActivity"
             android:exported="false" />
         <activity
-            android:name="com.unlam.senalar.MainActivity"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
