--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
 
     implementation 'com.braintreepayments:card-form:5.4.0'
+
+    implementation("com.otaliastudios:zoomlayout:1.9.0")
 }
